Fix mobile dl section + remove dark mode flash

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,7 +33,7 @@
   }
 
   body {
-    @apply bg-background text-foreground antialiased;
+    @apply bg-background text-foreground antialiased overflow-x-hidden;
     @apply font-sans;
   }
 
